--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/movieRecycler"
         android:layout_width="412dp"
         android:layout_height="661dp"
         app:layout_constraintBottom_toBottomOf="parent"
