Connected movieList Items to ShowMovies Layout

--- a/app/src/main/res/layout/activity_show_movie.xml
+++ b/app/src/main/res/layout/activity_show_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowRecord">
+    tools:context=".ShowMovie">
 
     <TextView
         android:id="@+id/txtAwards"
@@ -241,7 +241,7 @@
         app:layout_constraintVertical_bias="0.939" />
 
     <ImageView
-        android:id="@+id/recordImage"
+        android:id="@+id/movieImage"
         android:layout_width="128dp"
         android:layout_height="142dp"
         app:layout_constraintBottom_toBottomOf="parent"
